# dco

./: .gitignore  ARCHITECTURE.md  MANIFEST.in  README.md  dco_cli.py  improve_doc.py  package-lock.json  package.json  pyproject.toml  start_dco.sh
.brain/: HUDDLE.md  SKILLS.md  repo_map.txt
.brain/context/: systemPatterns.md
backend/: main.py  memory.py  requirements.txt  scrum.py  subprocess_manager.py  test_logic.py
builds/v1/: improve_doc.py
builds/v1/src/doc/backend/: memory.py  test_logic.py
builds/v2/: .gitignore
builds/v2/.brain/: repo_map.txt
builds/v2/src/doc/: cli.py
builds/v2/src/doc/backend/: cartographer.py  main.py  requirements.txt  subprocess_manager.py
examples/test1/.brain/: HUDDLE.md
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: ChatConsole.tsx  HuddleView.tsx  TwinTerminal.tsx  TwinTerminalWrapper.tsx
src/dco/: cli.py
src/dco/backend/: main.py  memory.py  scrum.py
src/doc/backend/: scrum.py  subprocess_manager.py  verify_backend.py
